<resources>
    <string name="app_name">TP3_GRUPO2</string>
    <string name="main_header">Parking control</string>
    <string name="main_title">Bienvenido a parking system</string>
    <string name="main_subtitle">Inicia sesión para empezar</string>
    <string name="main_et_username">Nombre de usuario</string>
    <string name="main_et_password">Contraseña</string>
    <string name="main_btn_login">INICIAR SESIÓN</string>
    <string name="main_btn_register">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="title_activity_panel">PanelActivity</string>
    <string name="navigation_drawer_open">Abrir la navegacion</string>
    <string name="navigation_drawer_close">Cerrar la navegacion</string>
    <string name="nav_header_title">Nombre del usuario</string>
    <string name="nav_header_subtitle">correo@correo.com</string>
    <string name="nav_header_desc">Nav</string>
    <string name="action_settings">Ajustes</string>
    <string name="perfil_header">Perfil</string>
    <string name="logout">Cerrar Sesión</string>


    <string name="menu_home">Parking control</string>
</resources>